--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
   test: 
     name: Run Unit Test
     runs-on: ubuntu-22.04
+    needs: 
+      - test
     steps: 
       - name: Run Unit Test 
         run: |
@@ -15,6 +17,8 @@ jobs:
   build: 
     name: Build Application
     runs-on: ubuntu-22.04
+    needs: 
+      - build
     steps: 
       - name: Build Application 
         run: |
