--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,5 +98,7 @@ jobs:
           script: |
             pwd
             ls -la
+            rm -rf study-github
             git clone git@github.com:FriskiIqwan/study-github.git
             ls -la 
+            sudo cp -r study-github/* /var/www/html
